--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 @import "components/recipe-slide-card";
 @import "components/carousel-button";
 @import "components/button";
+@import "components/recipe-card";
 
 // Pages
 
