--- a/css/styles.css
+++ b/css/styles.css
@@ -7610,6 +7610,34 @@ footer p {
   background-color: #66d891;
   color: #393e4f; }
 
+.recipe-card {
+  margin: 0 0px 30px 0;
+  background-color: #FFF;
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.15);
+  padding: 12px;
+  text-align: center;
+  border: solid 1px #eaeaea;
+  border-radius: 3px; }
+
+.recipe-card-image {
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .recipe-card-image a {
+    display: block;
+    height: 200px; }
+  .recipe-card-image a {
+    color: #393e4f;
+    text-decoration: none; }
+    .recipe-card-image a h3 {
+      font-size: 1.1rem;
+      padding-top: 10px;
+      margin: 0; }
+
 body {
   background-color: #393e4f; }
 
