--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "vendors/bootstrap";
 @import "../node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 @import "../node_modules/@glidejs/glide/dist/css/glide.theme.min.css";
+@import "../node_modules/lightbox2/dist/css/lightbox.min.css";
 
 //Base
 @import "base/typography";
@@ -21,6 +22,8 @@
 @import "components/recipe-card";
 
 // Pages
+@import "pages/login-reg";
+@import "pages/recipe";
 
 // Themes
 @import "themes/theme";
