--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @import "components/carousel-button";
 @import "components/button";
 @import "components/recipe-card";
+@import "components/form";
 
 // Pages
 @import "pages/login-reg";
